@@ -81,7 +81,6 @@ utils_open_file( const char *filename, int autoload,
   libspectrum_id_t type;
   libspectrum_class_t class;
   int error;
-  size_t i;
 
   /* Read the file into a buffer */
   if( utils_read_file( filename, &file ) ) return 1;
@@ -171,14 +170,7 @@ utils_open_file( const char *filename, int autoload,
 
       PC = 0;
       machine_current->ram.current_rom = 1;
-      trdos_active = 1;
-
-      memory_map_home[0] = &memory_map_rom[4];
-      memory_map_home[1] = &memory_map_rom[5];
-
-      for( i = 0; i < 2; i++ )
-	if( memory_map[i].bank == MEMORY_BANK_HOME )
-	  memory_map[i] = *memory_map_home[i];
+      trdos_page();
     }
     break;
 
